WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314048
[AppKit Gestures] Double clicking text in Safari does not highlight text (selection flickers)
https://bugs.webkit.org/show_bug.cgi?id=314048
Summary
[AppKit Gestures] Double clicking text in Safari does not highlight text (sel...
Richard Robinson
Reported
2026-05-04 20:46:46 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Richard Robinson
Comment 1
2026-05-04 20:46:47 PDT
<
rdar://problem/172217561
>
Richard Robinson
Comment 2
2026-05-04 20:53:36 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64239
EWS
Comment 3
2026-05-05 21:33:02 PDT
Committed
312666@main
(80675181b655): <
https://commits.webkit.org/312666@main
> Reviewed commits have been landed. Closing PR #64239 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug